syntax = "proto3";

package common.v1;

option go_package = "github.com/ole-larsen/plutonium/gen/common/v1;commonv1";

import "common/v1/file.proto";

message PublicUserAttributes {
  string username = 2;     
  string address = 3;      
  string email = 4;        
  string uuid = 5;       
  string gravatar = 6;    
  string nonce = 7;         
  string token = 8;           
  string funds = 9;          
  PublicFile wallpaper = 10;     
  string created = 11;       
}

message PublicUser {
  int64 id = 1;             
  PublicUserAttributes attributes = 2;
}