syntax = "proto3";

package frontend.v1;

option go_package = "github.com/ole-larsen/plutonium/gen/frontend/v1;frontendv1";

import "frontend/v1/collection.proto";
import "frontend/v1/file.proto";

message PublicCategory {
  int64 id = 1;
  PublicCategoryAttributes attributes = 2;
}

message PublicCategoryAttributes {
  string title = 1;
  string slug = 2;
  string description = 3;
  string content = 4;
  PublicFile image = 5;
  repeated MarketplaceCollection collections = 6;
}

message CategoriesRequest {
  string provider = 1;
}